the design is added testimonials are left

--- a/index.html
+++ b/index.html
@@ -1,48 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONTS LINK -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <!-- title -->
-    <title>THE TITLE FOR THE PRODUCT</title>
+    <title>The Coder's Playbook</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/893/893097.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="elements/hacker.png" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- navigation bar -->
     <nav class="navBar">
         <!-- left -->
         <div class="left">
             <!--logo  -->
-            
+            <img class="logo" src="elements/hacker.png" alt="logo">
             <!-- header line -->
+            <p class="titleNav">The Coder's Playbook.</p>
         </div>
         <!-- right -->
         <div class="right">
-            <!-- call direct button and number -->
+            <!-- Contact -->
+            <p class="navRt1">About</p>
+            <p class="navRt2">Contact</p>
+            <p class="navRt3">Page sample</p>
         </div>
     </nav>
     <!-- THE FIRST SLIDE  -->
     <!-- it contains the image the heading and the description of product with a BUY Now Button -->
-    <div class="firstslide">
-        <!-- heading -->
-        <!-- description -->
-        <!--Button-->
+    <!-- heading -->
+    <div class="contentOne">
+        <!-- left side of flex box having the heading  description and buy now button -->
+        <div class="leftOne">
+            <div class="heading">The Coder's Playbook.</div>
+            <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit nobis nemo iusto possimus dolor velit quidem temporibus odit, recusandae aspernatur corrupti facere excepturi consectetur perspiciatis quam. Ea eos consectetur distinctio hic veritatis.</div>
+            <button class="btn">Buy Now</button>
+        </div>
+        <!-- the image on right side of flex box -->
+        <div class="rightOne">
+            <img class="image" src="elements/Group 3.png" alt="book image">
+        </div>
+        </div>
+
+    <div class="testimonial">
+        <div class="headingTwo">testimonials...</div>
+
+        <!-- the information like the testimonials of product  -->
+        <div class="t1"></div>
+        <div class="t2"></div>
+        <div class="t3"></div>
+        <div class="t4"></div>
+        <!-- a flex box containing 4 images and the text description -->
     </div>
-    <!-- the information like the testimonials of product  -->
-    <!-- a flex box containing 4 images and the text description -->
+    <div class="creator">
 
-    <!-- the mesasge by the creator or the owner of the product with his/her image -->
+        <!-- the mesasge by the creator or the owner of the product with his/her image -->
+    </div>
+    <div class="checkoutAgain">
+        <!-- a window again telling to buy the product -->
 
-    <!-- a window again telling to buy the product -->
+    </div>
+    <div class="footer">
+        <!-- the foooter -->
 
-    <!-- the foooter -->
-    
+    </div>
+
 </body>
+
 </html>
